--- a/app/templates/public/about/about.html
+++ b/app/templates/public/about/about.html
@@ -5,7 +5,7 @@
     <div class="row justify-content-center align-items-center">
       <div class="col-lg-10">
         <div class="text-white text-center">
-          <h2 class="fw-bold fs-3 title-clamp-2 mb-0">Tentang Kami</h2>
+          <h2 class="fw-bold fs-3 title-clamp-2 mb-0">Tentang</h2>
         </div>
       </div>
     </div>
@@ -16,19 +16,27 @@
 <!-- Page Wrapper -->
 <div class="page-wrapper bg-body-tertiary">
   <div class="container">
-    <div class="row flex-column-reverse flex-lg-row-reverse justify-content-evenly align-items-center row-gap-4 py-5">
-      <div class="col-lg-5">
+    <div class="row flex-column-reverse flex-lg-row-reverse justify-content-evenly align-items-start row-gap-4 py-5">
+      <div class="col-lg-6">
         <div class="d-flex flex-column row-gap-4">
-          <h3 class="fw-semibold fs-4 mb-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt.</h3>
+          <h3 class="fw-semibold fs-4 mb-0">Sistem Pendukung Keputusan Pemilihan Tempat Wisata di Kabupaten Bondowoso</h3>
           <div class="d-flex flex-column row-gap-3">
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, atque? Eum ab explicabo blanditiis iure atque sapiente, id commodi a nesciunt alias aut nobis velit voluptate, vero earum reiciendis vel!</p>
-            <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, saepe perspiciatis. Eos totam nesciunt dolorem asperiores necessitatibus similique at veritatis repellendus est laboriosam, dolor eaque!</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae itaque beatae nisi ab doloribus nemo, optio facere non voluptatem quae excepturi quam eum amet neque quisquam? Nisi ad minus alias?</p>
+            <p class="mb-0">
+              Kabupaten Bondowoso dikenal sebagai wilayah yang memiliki banyak objek wisata yang mempesona dan digemari oleh wisatawan. Dalam melakukan perjalanan wisata, tentunya wisatawan memiliki kebutuhan wisata yang berbeda-beda untuk
+              berwisata ke tempat wisata yang diinginkan.
+            </p>
+            <p class="mb-0">
+              Contoh kebutuhan wisatawam seperti harga tiket, fasilitas wisata, jarak ke tempat wisata, dan lain sebagainya. Oleh sebab itu, website ini dibuat dengan tujuan untuk mempermudah dan membantu calon wisatawan dalam menentukan
+              objek wisata sesuai dengan kebutuhan wisatawan dalam fitur Rekomendasi Wisata.
+            </p>
+            <p class="mb-0">Langkah - langkah untuk menentukan rekomendasi wisata dan lain sebagainya dapat dilihat pada fitur Bantuan Penggunaan.</p>
           </div>
         </div>
       </div>
       <div class="col-lg-5">
-        <img src="{{ url_for('static', filename='media/uploads/default.jpg') }}" class="img-fluid pe-none rounded-3" alt="default" />
+        <div class="ratio ratio-1x1">
+          <img src="{{ url_for('static', filename='media/uploads/about/default.jpg') }}" class="ratio-content pe-none rounded-3" style="object-fit: cover; transform: translate3d(0, 0, 1px)" alt="Tentang" />
+        </div>
       </div>
     </div>
   </div>
