--- a/app/templates/public/services/services.html
+++ b/app/templates/public/services/services.html
@@ -18,12 +18,12 @@
   <div class="container">
     <div class="row justify-content-center align-items-center pt-5">
       <div class="col-lg-10">
-        <h3 class="fw-semibold fs-5 mb-0" data-aos="fade-up">Lorem ipsum dolor sit amet consectetur:</h3>
+        <h3 class="fw-semibold fs-5 mb-0" data-aos="fade-up">Daftar menu layanan yang tersedia:</h3>
       </div>
     </div>
     <div class="row justify-content-center align-items-center row-gap-4 py-5">
       <div class="col-lg-5 d-flex align-self-stretch">
-        <div class="card hover-upwards border-0 shadow-sm rounded-3">
+        <div class="card hover-upwards shadow-sm rounded-3">
           <div class="card-body p-4">
             <div class="d-flex flex-column flex-lg-row row-gap-3 column-gap-4">
               <div class="flex-shrink-0">
@@ -33,16 +33,14 @@
               </div>
               <div class="d-flex flex-column row-gap-2">
                 <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.usage_help') }}">Bantuan Penggunaan</a>
-                <p class="small text-clamp-3 mb-0">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque placeat vel ipsa, sint dolores ipsum.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque placeat vel ipsa, sint dolores ipsum.
-                </p>
+                <p class="small text-clamp-3 mb-0">Berisi tentang langkah-langkah dalam menentukam rekomendasi wisata.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-5 d-flex align-self-stretch">
-        <div class="card hover-upwards border-0 shadow-sm rounded-3">
+        <div class="card hover-upwards shadow-sm rounded-3">
           <div class="card-body p-4">
             <div class="d-flex flex-column flex-lg-row row-gap-3 column-gap-4">
               <div class="flex-shrink-0">
@@ -54,14 +52,14 @@
               </div>
               <div class="d-flex flex-column row-gap-2">
                 <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.system_data') }}">Data Sistem</a>
-                <p class="small text-clamp-3 mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque placeat vel ipsa, sint dolores ipsum.</p>
+                <p class="small text-clamp-3 mb-0">Berisi tentang data-data yang dibutuhkan oleh sistem.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-5 d-flex align-self-stretch">
-        <div class="card hover-upwards border-0 shadow-sm rounded-3">
+        <div class="card hover-upwards shadow-sm rounded-3">
           <div class="card-body p-4">
             <div class="d-flex flex-column flex-lg-row row-gap-3 column-gap-4">
               <div class="flex-shrink-0">
@@ -74,14 +72,14 @@
               </div>
               <div class="d-flex flex-column row-gap-2">
                 <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.tour_list') }}">Daftar Wisata</a>
-                <p class="small text-clamp-3 mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque placeat vel ipsa, sint dolores ipsum.</p>
+                <p class="small text-clamp-3 mb-0">Berisi tentang daftar objek wisata yang ada di Kabupaten Bondowoso.</p>
               </div>
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-5 d-flex align-self-stretch">
-        <div class="card hover-upwards border-0 shadow-sm rounded-3">
+        <div class="card hover-upwards shadow-sm rounded-3">
           <div class="card-body p-4">
             <div class="d-flex flex-column flex-lg-row row-gap-3 column-gap-4">
               <div class="flex-shrink-0">
@@ -92,7 +90,7 @@
               </div>
               <div class="d-flex flex-column row-gap-2">
                 <a class="h6 fw-semibold fs-5 text-decoration-none text-clamp-2 stretched-link mb-0" href="{{ url_for('public_app.tour_recommendation') }}">Rekomendasi Wisata</a>
-                <p class="small text-clamp-3 mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque placeat vel ipsa, sint dolores ipsum.</p>
+                <p class="small text-clamp-3 mb-0">Berisi tentang rekomendasi objek wisata di Kabupaten Bondowoso dengan cara memilih jawaban dalam form yang telah ditampilkan.</p>
               </div>
             </div>
           </div>
