--- a/app/templates/public/services/system_data/criteria_form.html
+++ b/app/templates/public/services/system_data/criteria_form.html
@@ -1,14 +1,44 @@
 {% extends 'components/public/base.html' %} {% set active_page = 'system_data' %} {% block content %}
-<!-- Page Wrapper -->
-<div class="page-wrapper d-flex bg-body-tertiary min-vh-100">
+<!-- Banner -->
+<div class="banner d-flex bg-hero h-20rem">
   <div class="container my-auto">
-    <div class="row justify-content-center align-items-center pt-6rem pb-5">
+    <div class="row justify-content-center align-items-center">
       <div class="col-lg-10">
-        <div class="card shadow rounded-3">
+        <div class="text-white text-center">
+          <h2 class="fw-bold fs-3 title-clamp-2 mb-0">{{ operation }} Kriteria</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End of Banner -->
+
+<!-- Page Wrapper -->
+<div class="page-wrapper bg-body-tertiary">
+  <div class="container">
+    <div class="row justify-content-center align-items-center pt-5">
+      <div class="col-lg-10">
+        <div class="d-flex flex-column row-gap-3">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb justify-content-center align-items-center mb-0">
+              <li class="breadcrumb-item"><a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" href="{{ url_for('public_app.services') }}">Layanan</a></li>
+              <li class="breadcrumb-item"><a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" href="{{ url_for('public_app.system_data') }}">Data Sistem</a></li>
+              <li class="breadcrumb-item"><a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" href="{{ url_for('public_app.criteria') }}">Kriteria</a></li>
+              <li class="breadcrumb-item active" aria-current="page">{{ operation }} Kriteria</li>
+            </ol>
+          </nav>
+          {% if current_user.role == "admin" %}
+          <div class="text-center">
+            <a class="btn btn-success rounded-5 py-1 px-3" href="{{ url_for('public_app.create_criteria') }}" role="button">Tambah</a>
+          </div>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center align-items-center py-5">
+      <div class="col-lg-10">
+        <div class="card shadow-sm rounded-3">
           <div class="card-body p-lg-5 py-5 px-4">
-            <div class="text-center mb-5">
-              <h3 class="fw-bold fs-4 mb-0">{{operation}} Kriteria</h3>
-            </div>
             <form method="POST">
               {{ form.hidden_tag() }}
               <div class="mb-3">
@@ -48,8 +78,8 @@
                 {% else %} {{ form.weight(class="form-control") }} {% endif %}
               </div>
               <div class="d-flex flex-row justify-content-end align-items-center column-gap-2">
-                <a class="btn btn-secondary" href="{{ url_for('public_app.criteria') }}" role="button">Batal</a>
-                {{ form.submit(class="btn btn-primary") }}
+                <a class="btn btn-secondary rounded-5 py-1 px-3" href="{{ url_for('public_app.criteria') }}" role="button">Batal</a>
+                {{ form.submit(class="btn btn-success rounded-5 py-1 px-3") }}
               </div>
             </form>
           </div>
