--- a/app/templates/components/public/includes/navbar.html
+++ b/app/templates/components/public/includes/navbar.html
@@ -35,8 +35,7 @@
         <ul class="navbar-nav">
           {% if current_user.is_authenticated %}
           <li class="nav-item dropdown">
-            <!-- <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ current_user.name }}</a> -->
-            <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link text-body" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <div class="d-flex align-items-center column-gap-2">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1.5em" fill="currentColor" viewBox="0 0 16 16">
                   <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
@@ -51,8 +50,9 @@
             </ul>
           </li>
           {% else %}
-          <li class="nav-item my-auto me-2">
-            <a class="btn btn-secondary text-white rounded-5 py-1 px-3" href="{{ url_for('control_panel_app.login') }}" role="button">Masuk</a>
+          <li class="nav-item my-auto">
+            <a class="btn btn-outline-dark rounded-5 py-1 px-3" href="{{ url_for('control_panel_app.login') }}" role="button">Masuk</a>
+            <a class="btn btn-dark rounded-5 py-1 px-3" href="{{ url_for('control_panel_app.register') }}" role="button">Daftar</a>
           </li>
           {% endif %}
         </ul>
