--- a/app/templates/control_panel/account/profile_form.html
+++ b/app/templates/control_panel/account/profile_form.html
@@ -17,8 +17,8 @@
 <div class="page-wrapper bg-body-tertiary">
   <div class="container">
     <div class="row justify-content-center align-items-center py-5">
-      <div class="col-lg-5">
-        <div class="card border-0 shadow rounded-3">
+      <div class="col-lg-10">
+        <div class="card shadow-sm rounded-3">
           <div class="card-body p-lg-5 py-5 px-4">
             <form method="POST">
               {{ form.hidden_tag() }}
@@ -59,8 +59,8 @@
                 {% else %} {{ form.email(class="form-control") }} {% endif %}
               </div>
               <div class="d-flex flex-row justify-content-end align-items-center column-gap-2">
-                <a class="btn btn-light border border-secondary rounded-5 py-1 px-3" href="{{ url_for('control_panel_app.profile', id=current_user.id) }}" role="button">Batal</a>
-                {{ form.submit(class="btn btn-dark rounded-5 py-1 px-3") }}
+                <a class="btn btn-secondary rounded-5 py-1 px-3" href="{{ url_for('control_panel_app.profile', id=current_user.id) }}" role="button">Batal</a>
+                {{ form.submit(class="btn btn-success rounded-5 py-1 px-3") }}
               </div>
             </form>
           </div>
