--- a/app/templates/control_panel/auth/forgot-password.html
+++ b/app/templates/control_panel/auth/forgot-password.html
@@ -4,7 +4,7 @@
   <div class="container my-auto">
     <div class="row justify-content-center align-items-center py-5">
       <div class="col-lg-5">
-        <div class="card border-0 shadow rounded-3">
+        <div class="card shadow-sm rounded-3">
           <div class="card-body p-lg-5 py-5 px-4">
             <div class="text-center mb-5">
               <h3 class="fw-bold fs-4 mb-0">Lupa password?</h3>
@@ -21,7 +21,7 @@
                 {% else %} {{ form.email(class="form-control") }} {% endif %}
                 <div class="form-text">Silakan masukkan alamat email Anda untuk menerima tautan pengaturan ulang password.</div>
               </div>
-              <div class="d-grid">{{ form.submit(class="btn btn-secondary text-white rounded-5") }}</div>
+              <div class="d-grid">{{ form.submit(class="btn btn-dark rounded-5") }}</div>
             </form>
           </div>
           <div class="card-footer p-3">
