--- a/app/templates/public/services/system_data/sub-criteria.html
+++ b/app/templates/public/services/system_data/sub-criteria.html
@@ -1,103 +1,116 @@
 {% extends 'components/public/base.html' %} {% set active_page = 'system_data' %} {% block content %}
-<!-- Page Wrapper -->
-<div class="page-wrapper d-flex bg-body-tertiary min-vh-100">
+<!-- Banner -->
+<div class="banner d-flex bg-hero h-20rem">
   <div class="container my-auto">
-    <div class="row justify-content-center align-items-center pt-6rem pb-5">
+    <div class="row justify-content-center align-items-center">
       <div class="col-lg-10">
-        <div class="card shadow rounded-3">
-          <div class="card-body d-flex flex-column row-gap-4 p-lg-5 py-5 px-4">
-            <div class="d-flex flex-column row-gap-4">
-              <div class="d-flex flex-column justify-content-center align-items-center row-gap-2">
-                <div class="text-center">
-                  <h3 class="fw-bold fs-4 mb-0">Sub Kriteria</h3>
-                </div>
-                <nav aria-label="breadcrumb">
-                  <ol class="breadcrumb justify-content-center align-items-center mb-0">
-                    <li class="breadcrumb-item"><a class="text-decoration-none" href="{{ url_for('public_app.services') }}">Layanan</a></li>
-                    <li class="breadcrumb-item"><a class="text-decoration-none" href="{{ url_for('public_app.system_data') }}">Data Sistem</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Sub Kriteria</li>
-                  </ol>
-                </nav>
+        <div class="text-white text-center">
+          <h2 class="fw-bold fs-3 title-clamp-2 mb-0">Sub Kriteria</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End of Banner -->
+
+<!-- Page Wrapper -->
+<div class="page-wrapper bg-body-tertiary">
+  <div class="container">
+    <div class="row justify-content-center align-items-center pt-5">
+      <div class="col-lg-10">
+        <div class="d-flex flex-column row-gap-3">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb justify-content-center align-items-center mb-0">
+              <li class="breadcrumb-item"><a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" href="{{ url_for('public_app.services') }}">Layanan</a></li>
+              <li class="breadcrumb-item"><a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" href="{{ url_for('public_app.system_data') }}">Data Sistem</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Sub Kriteria</li>
+            </ol>
+          </nav>
+          {% if current_user.role == "admin" %}
+          <div class="text-center">
+            <a class="btn btn-success rounded-5 py-1 px-3" href="{{ url_for('public_app.create_sub_criteria') }}" role="button">Tambah</a>
+          </div>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+    {% if datas.total > 0 %}
+    <div class="row flex-column justify-content-center align-items-center row-gap-4 py-5">
+      {% for data in datas %}
+      <div class="col-lg-5">
+        <div class="card shadow-sm rounded-3">
+          <div class="card-header bg-body-secondary rounded-top-3">
+            <h5 class="fw-semibold fs-6 text-clamp-1 mb-0">{{ data.criteria.name }}</h5>
+          </div>
+          <div class="card-body">
+            <div class="d-flex flex-column flex-lg-row justify-content-between align-items-start align-items-lg-end row-gap-3">
+              <div class="d-flex flex-column row-gap-1">
+                <p class="small text-clamp-1 mb-0">Nilai: {{ data.value }}</p>
+                <h6 class="fw-semibold fs-5 text-clamp-2 mb-0">{{ data.name }}</h6>
               </div>
               {% if current_user.role == "admin" %}
-              <div class="text-center">
-                <a class="btn btn-success" href="{{ url_for('public_app.create_sub_criteria') }}" role="button">Tambah</a>
+              <div class="d-flex flex-row justify-content-start column-gap-2">
+                <a class="btn btn-danger rounded-5 py-1 px-3" href="#" role="button" data-bs-toggle="modal" data-bs-target="#deleteDataModal{{ data.id }}">Hapus</a>
+                <a class="btn btn-primary rounded-5 py-1 px-3" href="{{ url_for('public_app.update_sub_criteria', id=data.id) }}" role="button">Edit</a>
               </div>
               {% endif %}
-            </div>
-            <div class="row justify-content-center align-items-center row-gap-4">
-              {% if datas.items %} {% for data in datas.items %}
-              <div class="col-lg-8">
-                <div class="card shadow-sm">
-                  <div class="card-body">
-                    <div class="d-flex flex-column flex-lg-row justify-content-between align-items-end align-items-lg-center row-gap-2">
-                      <div class="d-flex flex-column row-gap-1">
-                        <p class="small text-clamp-1 mb-0">{{ data.value }}</p>
-                        <h6 class="fw-semibold fs-5 text-clamp-2 mb-0">{{ data.name }}</h6>
-                      </div>
-                      <div class="d-flex flex-row column-gap-2">
-                        <a class="btn btn-primary" href="{{ url_for('public_app.update_sub_criteria', id=data.id) }}" role="button">Edit</a>
-                        <a class="btn btn-danger" href="#" role="button" data-bs-toggle="modal" data-bs-target="#deleteDataModal{{ data.id }}">Hapus</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Delete Modal -->
-              <div class="modal fade" id="deleteDataModal{{ data.id }}" tabindex="-1" aria-labelledby="deleteDataModalLabel{{ data.id }}" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="deleteDataModalLabel{{ data.id }}">Hapus Data</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                      <p class="mb-0">Apakah Anda yakin ingin menghapus data ini?</p>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Batal</button>
-                      <a href="{{ url_for('public_app.delete_sub_criteria', id=data.id) }}" class="text-decoration-none">
-                        <button type="submit" class="btn btn-primary">Iya</button>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- End of Delete Modal -->
-              {% endfor %} {% else %}
-              <div class="col-lg-8">
-                <div class="text-center">
-                  <p class="mb-0">Data tidak ditemukan!</p>
-                </div>
-              </div>
-              {% endif %}
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <nav>
-                  <ul class="pagination justify-content-center align-items-center mb-0">
-                    {% for page_num in datas.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %} {% if page_num %} {% if datas.page == page_num %}
-                    <li class="page-item active" aria-current="page">
-                      <span class="page-link">{{ page_num }}</span>
-                    </li>
-                    {% else %}
-                    <li class="page-item">
-                      <a class="page-link" href="{{ url_for('public_app.sub_criteria', page=page_num) }}">{{ page_num }}</a>
-                    </li>
-                    {% endif %} {% else %}
-                    <li class="page-item">
-                      <span class="page-link">...</span>
-                    </li>
-                    {% endif %} {% endfor %}
-                  </ul>
-                </nav>
-              </div>
             </div>
           </div>
         </div>
       </div>
+      <!-- Delete Modal -->
+      <div class="modal fade" id="deleteDataModal{{ data.id }}" tabindex="-1" aria-labelledby="deleteDataModalLabel{{ data.id }}" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="deleteDataModalLabel{{ data.id }}">Hapus Data</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p class="mb-0">Apakah Anda yakin ingin menghapus data ini?</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary rounded-5 py-1 px-3" data-bs-dismiss="modal">Batal</button>
+              <a href="{{ url_for('public_app.delete_sub_criteria', id=data.id) }}" class="text-decoration-none">
+                <button type="submit" class="btn btn-danger rounded-5 py-1 px-3">Hapus</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End of Delete Modal -->
+      {% endfor %}
     </div>
+    <div class="row pb-5">
+      <div class="col-lg-12">
+        <nav>
+          <ul class="pagination justify-content-center align-items-center mb-0">
+            {% for page_num in datas.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %} {% if page_num %} {% if datas.page == page_num %}
+            <li class="page-item active" aria-current="page">
+              <span class="page-link">{{ page_num }}</span>
+            </li>
+            {% else %}
+            <li class="page-item">
+              <a class="page-link" href="{{ url_for('public_app.sub_criteria', page=page_num) }}">{{ page_num }}</a>
+            </li>
+            {% endif %} {% else %}
+            <li class="page-item">
+              <span class="page-link">...</span>
+            </li>
+            {% endif %} {% endfor %}
+          </ul>
+        </nav>
+      </div>
+    </div>
+    {% else %}
+    <div class="row justify-content-center align-items-center py-5">
+      <div class="col-lg-10">
+        <div class="text-center">
+          <p class="text-muted mb-0">Tidak ada data yang tersedia.</p>
+        </div>
+      </div>
+    </div>
+    {% endif %}
   </div>
 </div>
 <!-- End of Page Wrapper -->
