--- a/app/templates/public/services/tour_recommendation/tour-recommendation_result.html
+++ b/app/templates/public/services/tour_recommendation/tour-recommendation_result.html
@@ -1,50 +1,71 @@
 {% extends 'components/public/base.html' %} {% set active_page = 'tour_recommendation' %} {% block content %}
-<!-- Page Wrapper -->
-<div class="page-wrapper d-flex bg-body-tertiary min-vh-100">
+<!-- Banner -->
+<div class="banner d-flex bg-hero h-20rem">
   <div class="container my-auto">
-    <div class="row justify-content-center align-items-center pt-6rem pb-5">
+    <div class="row justify-content-center align-items-center">
       <div class="col-lg-10">
-        <div class="card shadow rounded-3">
-          <div class="card-body d-flex flex-column row-gap-4 py-5 px-4 p-lg-5">
-            <div class="d-flex flex-column justify-content-center align-items-center row-gap-2">
-              <div class="text-center">
-                <h3 class="fw-bold fs-4 mb-0">Rekomendasi Wisata</h3>
-              </div>
-              <nav aria-label="breadcrumb">
-                <ol class="breadcrumb justify-content-center align-items-center mb-0">
-                  <li class="breadcrumb-item"><a class="text-decoration-none" href="{{ url_for('public_app.services') }}">Layanan</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Rekomendasi Wisata</li>
-                </ol>
-              </nav>
-            </div>
-            <div class="row justify-content-center align-items-center row-gap-4">
-              <div class="col-lg-12">
-                <div class="table-responsive">
-                  <table class="table table-striped table-hover w-full mb-0">
-                    <thead>
-                      <tr>
-                        <th class="align-middle text-center" style="width: 10%">Ranking</th>
-                        <th class="align-middle text-center" style="width: 20%">Skor</th>
-                        <th class="align-middle text-start" style="width: 70%">Nama Objek Wisata</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      {% for item in result %}
-                      <tr>
-                        <th class="align-middle text-center">{{ item.ranking }}</th>
-                        <td class="align-middle text-center">{{ item.score }}</td>
-                        <td class="align-middle text-start">{{ item.tour_object }}</td>
-                      </tr>
-                      {% endfor %}
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-              <div class="d-grid">
-                <a class="btn btn-primary" href="{{ url_for('public_app.tour_recommendation') }}" role="button">Kembali</a>
-              </div>
+        <div class="text-white text-center">
+          <h2 class="fw-bold fs-3 title-clamp-2 mb-0">Rekomendasi Wisata</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End of Banner -->
+
+<!-- Page Wrapper -->
+<div class="page-wrapper bg-body-tertiary">
+  <div class="container">
+    <div class="row justify-content-center align-items-center pt-5">
+      <div class="col-lg-10">
+        <div class="d-flex flex-column row-gap-3">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb justify-content-center align-items-center mb-0">
+              <li class="breadcrumb-item"><a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" href="{{ url_for('public_app.services') }}">Layanan</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Rekomendasi Wisata</li>
+            </ol>
+          </nav>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center align-items-center py-5">
+      <div class="col-lg-7">
+        {% if error_message %}
+        <div class="alert alert-danger shadow-sm rounded-3 text-center mb-4" role="alert">
+          <p class="mb-0">{{ error_message }}</p>
+        </div>
+        {% else %}
+        <div class="card shadow-sm rounded-3 mb-4">
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-striped table-hover w-full mb-0">
+                <thead>
+                  <tr>
+                    <th class="align-middle text-center" style="width: 10%">Ranking</th>
+                    <th class="align-middle text-center" style="width: 20%">Skor</th>
+                    <th class="align-middle text-start" style="width: 50%">Nama Objek Wisata</th>
+                    <th class="align-middle text-center" style="width: 20%">Aksi</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for item in result %}
+                  <tr>
+                    <th class="align-middle text-center">{{ item.ranking }}</th>
+                    <td class="align-middle text-center">{{ item.score }}</td>
+                    <td class="align-middle text-start">{{ item.tour_object }}</td>
+                    <td class="align-middle text-center">
+                      <a class="btn btn-dark rounded-5 py-1 px-3" href="{{ url_for('public_app.tour_list_detail', id=item.action) }}" target="_blank">Lihat</a>
+                    </td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
             </div>
           </div>
+        </div>
+        {% endif %}
+        <div class="d-grid">
+          <a class="btn btn-dark rounded-5" href="{{ url_for('public_app.tour_recommendation') }}" role="button">Kembali</a>
         </div>
       </div>
     </div>
