--- a/app/templates/public/services/usage_help/usage-help_form.html
+++ b/app/templates/public/services/usage_help/usage-help_form.html
@@ -5,7 +5,7 @@
     <div class="row justify-content-center align-items-center">
       <div class="col-lg-10">
         <div class="text-white text-center">
-          <h2 class="fw-bold fs-3 title-clamp-2 mb-0">{{operation}} Bantuan Penggunaan</h2>
+          <h2 class="fw-bold fs-3 title-clamp-2 mb-0">{{ operation }} Bantuan Penggunaan</h2>
         </div>
       </div>
     </div>
@@ -15,10 +15,28 @@
 
 <!-- Page Wrapper -->
 <div class="page-wrapper bg-body-tertiary">
-  <div class="container my-auto">
+  <div class="container">
+    <div class="row justify-content-center align-items-center pt-5">
+      <div class="col-lg-10">
+        <div class="d-flex flex-column row-gap-3">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb justify-content-center align-items-center mb-0">
+              <li class="breadcrumb-item"><a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" href="{{ url_for('public_app.services') }}">Layanan</a></li>
+              <li class="breadcrumb-item"><a class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-100-hover" href="{{ url_for('public_app.usage_help') }}">Bantuan Penggunaan</a></li>
+              <li class="breadcrumb-item active" aria-current="page">{{ operation }} Bantuan Penggunaan</li>
+            </ol>
+          </nav>
+          {% if current_user.role == "admin" %}
+          <div class="text-center">
+            <a class="btn btn-success rounded-5 py-1 px-3" href="{{ url_for('public_app.create_usage_help') }}" role="button">Tambah</a>
+          </div>
+          {% endif %}
+        </div>
+      </div>
+    </div>
     <div class="row justify-content-center align-items-center py-5">
       <div class="col-lg-10">
-        <div class="card border-0 shadow rounded-3">
+        <div class="card shadow-sm rounded-3">
           <div class="card-body p-lg-5 py-5 px-4">
             <form enctype="multipart/form-data" method="POST">
               {{ form.hidden_tag() }}
@@ -50,8 +68,8 @@
                 {% else %} {{ form.image(class="form-control", type="file") }} {% endif %}
               </div>
               <div class="d-flex flex-row justify-content-end align-items-center column-gap-2">
-                <a class="btn btn-light border border-secondary rounded-5 py-1 px-3" href="{{ url_for('public_app.usage_help') }}" role="button">Batal</a>
-                {{ form.submit(class="btn btn-dark rounded-5 py-1 px-3") }}
+                <a class="btn btn-secondary rounded-5 py-1 px-3" href="{{ url_for('public_app.usage_help') }}" role="button">Batal</a>
+                {{ form.submit(class="btn btn-success rounded-5 py-1 px-3") }}
               </div>
             </form>
           </div>
