update all tour list datas, handle system data service access

--- a/app/templates/components/public/includes/navbar.html
+++ b/app/templates/components/public/includes/navbar.html
@@ -23,7 +23,9 @@
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Layanan</a>
             <ul class="dropdown-menu">
               <li><a class="{{ 'dropdown-item active' if active_page == 'usage_help' else 'dropdown-item' }}" href="{{ url_for('public_app.usage_help') }}">Bantuan Penggunaan</a></li>
+              {% if current_user.role == "admin" %}
               <li><a class="{{ 'dropdown-item active' if active_page == 'system_data' else 'dropdown-item' }}" href="{{ url_for('public_app.system_data') }}">Data Sistem</a></li>
+              {% endif %}
               <li><a class="{{ 'dropdown-item active' if active_page == 'tour_list' else 'dropdown-item' }}" href="{{ url_for('public_app.tour_list') }}">Daftar Wisata</a></li>
               <li><a class="{{ 'dropdown-item active' if active_page == 'tour_recommendation' else 'dropdown-item' }}" href="{{ url_for('public_app.tour_recommendation') }}">Rekomendasi Wisata</a></li>
             </ul>
