--- a/app/templates/public/services/system_data/location-point.html
+++ b/app/templates/public/services/system_data/location-point.html
@@ -40,7 +40,7 @@
       <div class="col-lg-5">
         <div class="card shadow-sm rounded-3">
           <div class="card-body p-4">
-            <div class="d-flex flex-column flex-lg-row justify-content-between align-items-start align-items-lg-center row-gap-3">
+            <div class="d-flex flex-column row-gap-3">
               <h6 class="fw-semibold fs-5 text-clamp-2 mb-0">{{ data.name }}</h6>
               {% if current_user.role == "admin" %}
               <div class="d-flex flex-row justify-content-start column-gap-2">
